--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,6 @@ hspn-preprocess = "hspn3.prepare:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+[tool.ruff]
+ignore = ["N813"]
+
