--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,25 +7,15 @@ authors = [
   { name="Jasmine Ratchford", email="jratchford@sei.cmu.edu" },
   { name = "Marco Christiani", email = "mchristiani@sei.cmu.edu" },
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
-  # TODO: can we change the docker image? what does cluster have?
-  # tf's image has dependency conflicts, so we cant use uv to build unless we can update our tf image (ideal)
-  # for that reason, we use pip to build for now and no versions because we cant lock if the env cant resolve.
-  # "tensorflow==2.8.0",
-  "matplotlib",
-  "scikit-learn",
-  "scipy",
-  "jax",
-  "tqdm",
-  "pandas",
-  "pyyaml",
-  "tensorflow>=2.13.1; sys_platform == 'darwin'",
-  "keras>=2.13.1; sys_platform == 'darwin'",
-  "hydra-core>=1.3.2",
-  "netcdf4 >= 1.7.2",
-  "pydantic>=2.10.0",
-  "h5py>=3.12.0",
+    # TODO: can we change the docker image? what does cluster have?
+    "h5py>=3.13.0",
+    "hydra-core>=1.3.2",
+    "netcdf4>=1.7.2",
+    "pydantic>=2.10.0",
+    "torch>=2.6.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.optional-dependencies]
