--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "h5py>=3.13.0",
     "hydra-core>=1.3.2",
     "netcdf4>=1.7.2",
-    "pydantic>=2.10.0",
     "torch>=2.6.0",
     "tqdm>=4.67.1",
 ]
@@ -41,6 +40,37 @@ include = [
 [tool.hatch.build.targets.wheel]
 packages = ["src/hspn"]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+]
+
 [tool.ruff]
 ignore = ["N813"]
 
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["osx-arm64"]
+
+[tool.pixi.pypi-dependencies]
+hspn = { path = ".", editable = true }
+
+[tool.pixi.tasks]
+preprocess = "preprocess"
+
+[tool.pixi.dependencies]
+python = "3.10.*"
+omegaconf = ">=2.3.0,<3"
+numpy = ">=1.26.4,<2"
+tensorflow = ">=2.13.1"
+keras = ">=2.13.1"
+pixi-pycharm = ">=0.0.8,<0.0.9"
+jupyter = ">=1.1.1,<2"
+ipython = ">=8.23.0,<9"
+typing_extensions = ">=4.6.0,<5"
+viztracer = ">=1.0.2,<2"
+py-spy = ">=0.4.0,<0.5"
+tabulate = ">=0.9.0,<0.10"
+cftime = ">=1.6.4,<2"
+netcdf4 = ">=1.7.2,<2"
