--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     # TODO: can we change the docker image? what does cluster have?
     "h5py>=3.13.0",
     "hydra-core>=1.3.2",
+    "hydra-optuna-sweeper>=1.2.0",
     "netcdf4>=1.7.2",
     "torch>=2.6.0",
     "tqdm>=4.67.1",
