--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ authors = [
   { name="Jasmine Ratchford", email="jratchford@sei.cmu.edu" },
   { name = "Marco Christiani", email = "mchristiani@sei.cmu.edu" },
 ]
-requires-python = ">=3.10"
+#requires-python = ">=3.10"
 dependencies = [
     # TODO: can we change the docker image? what does cluster have?
-    "h5py>=3.13.0",
+    "h5py", #>=3.13.0",
     "hydra-core>=1.3.2",
     "hydra-optuna-sweeper>=1.2.0",
     "netcdf4>=1.7.2",
-    "torch>=2.6.0",
+    "torch>2.4.0",#=2.6.0",
     "tqdm>=4.67.1",
 ]
 
