--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "hydra-optuna-sweeper>=1.2.0",
     "netcdf4>=1.7.2",
-    "torch>2.4.0",#=2.6.0",
+    "torch==2.4.1",
     "tqdm>=4.67.1",
 ]
 
