feat(tracker): update tracker, add to sweep config

--- a/src/hspn/conf/train_sweep.yaml
+++ b/src/hspn/conf/train_sweep.yaml
@@ -65,6 +65,16 @@ optimizer_factory:
 # Scheduler configuration
 scheduler_factory: null
 
+tracker_config: ${extra.aim_config}
+
 extra:
   data_dir: ${oc.env:DATA_DIR,./data}
+  tb_config:
+    log_dir: ${checkpoint_dir}
+    backend: tensorboard
+    experiment_name: ${now:%Y-%m-%d_%H-%M-%S}_${hydra:job.name}
+  aim_config:
+    log_dir: .
+    backend: aim
+    experiment_name: ${now:%Y-%m-%d_%H-%M-%S}_${hydra:job.name}
 
