--- a/src/hspn/conf/train_hpo_optuna.yaml
+++ b/src/hspn/conf/train_hpo_optuna.yaml
@@ -1,3 +1,14 @@
+# src/hspn/conf/train_hpo_optuna.yaml
+# A hyperparameter optimization sweep using the optuna sweeper with the grid sampler.
+# Inherits from train.yaml, we just specify what we want to sweep over (and override the run mode for convenience)
+# Uses the default launcher that simply launches trials sequentially. Of course can override at CLI, e.g. "hydra/launcher=joblib"
+#
+# Usage: python -m hspn.train --config-name=train_hpo_optuna
+#
+# Documentation:
+#  - Sweeper configuration options: https://hydra.cc/docs/plugins/optuna_sweeper/
+#  - Optuna samplers:https://optuna.readthedocs.io/en/stable/reference/samplers/index.html 
+
 defaults:
   - train
   - _self_
@@ -5,8 +16,7 @@ defaults:
   - override hydra/sweeper/sampler: grid
 
 hydra:
-  mode: MULTIRUN
-  output_subdir: hydra
+  mode: MULTIRUN # equivalent to -m or --multirun on the command line. (Without specifying this at some point the sweep is not performed)
   sweeper:
    direction: minimize
    study_name: hspn
