--- a/src/hspn/conf/train_hpo_optuna.yaml
+++ b/src/hspn/conf/train_hpo_optuna.yaml
@@ -21,9 +21,10 @@ hydra:
    direction: minimize
    study_name: hspn
    storage: null
-   n_trials: 10
-   n_jobs: 1
+   n_trials: ${oc.env:N_TRIALS} # max number of trials, the sweeper may find it needs fewer trials
+   n_jobs: ${oc.env:N_WORKERS}
    params:
-     optimizer_factory._target_: choice(torch.optim.SGD ,torch.optim.Adam)
-     optimizer_factory.lr: range(0.0001, 0.0005, step=0.0001)
-
+     optimizer_factory.lr: choice(1e-5, 3e-5, 1e-4, 3e-4)
+     model.trunk_config.width: choice(50, 100)
+     model.trunk_config.depth: choice(4, 5, 6)
+     model.latent_dim: choice(10, 25)
