narrow python version for now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "hspn"
 version = "0.1.0"
 description = "deep operator networks for ARL CFD"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 authors = [
   { name="Jasmine Ratchford", email="jratchford@sei.cmu.edu" },
   { name = "Marco Christiani", email = "mchristiani@sei.cmu.edu" },
