--- a/src/hspn/conf/base.yaml
+++ b/src/hspn/conf/base.yaml
@@ -1,6 +1,7 @@
 defaults:
   - override hydra/hydra_logging: custom
   - override hydra/job_logging: custom
+  - _self_
 
 hydra:
   output_subdir: config
