--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "h5py>=3.13.0",
     "hydra-core>=1.3.2",
     "netcdf4>=1.7.2",
+    "rich>=14.0.0",
     "torch>=2.6.0",
     "tqdm>=4.67.1",
 ]
