feat(cluster): add dynamic Ray/Optuna HPO setup for SLURM
Rewrite hpo.slurm:
  - Auto-detect CPU/GPU resources
  - Start Ray head and workers via Apptainer
  - Launch Redis for Optuna storage
  - Use intranet IPs for Ray communication

Fix quoting and dependency logic in hpo-pbs.sh

Update hspn.def:
  - Add --no-cache-dir
  - Run pip cache purge

Simplify logging in hydra_logging and job_logging configs

Modify train.yaml:
  - Add AMP, grad scaling, grad clip, accumulation settings
  - Change dataset split fields and learning rate

Update train_hpo_optuna.yaml:
  - Use TPE sampler
  - Set Optuna params from environment
  - Increase n_epochs

Add train_ray.yaml for Ray multirun sweeps

--- a/src/hspn/conf/hydra/hydra_logging/custom.yaml
+++ b/src/hspn/conf/hydra/hydra_logging/custom.yaml
@@ -16,7 +16,11 @@ handlers:
   rich:
     class: rich.logging.RichHandler
     formatter: simple
-    rich_tracebacks: true
+    show_time: false
+    show_level: false
+    rich_tracebacks: false
+    tracebacks_show_locals: false
+    enable_link_path: false
 root:
   level: INFO
-  handlers: [ rich, file ]
+  handlers: [rich, file]
