--- a/src/hspn/conf/hydra/job_logging/custom.yaml
+++ b/src/hspn/conf/hydra/job_logging/custom.yaml
@@ -6,58 +6,11 @@ handlers:
   rich:
     class: rich.logging.RichHandler
     formatter: simple
-    rich_tracebacks: true
+    show_time: false
+    show_level: false
+    rich_tracebacks: false
+    tracebacks_show_locals: false
+    enable_link_path: false
 root:
   level: INFO
   handlers: [rich, file]
-#
-#   hydra_logging:
-#     version: 1
-#     formatters:
-#       simple:
-#         format: '[%(asctime)s][HYDRA] %(message)s'
-#     disable_existing_loggers: false
-#     handlers:
-#       console:
-#         class: logging.StreamHandler
-#         formatter: simple
-#         stream: ext://sys.stdout
-#       file:
-#         class: logging.FileHandler
-#         mode: w
-#         formatter: simple
-#         filename: hydra-${hydra.job.name}.log
-#         delay: true
-#       rich:
-#         class: rich.logging.RichHandler
-#         formatter: simple
-#         rich_tracebacks: true
-#     root:
-#       level: INFO
-#       handlers:
-#       - rich
-#       - file
-#   job_logging:
-#     version: 1
-#     formatters:
-#       simple:
-#         format: '[%(asctime)s][%(name)s][%(levelname)s] - %(message)s'
-#     handlers:
-#       console:
-#         class: logging.StreamHandler
-#         formatter: simple
-#         stream: ext://sys.stdout
-#       file:
-#         class: logging.FileHandler
-#         formatter: simple
-#         filename: ${hydra.runtime.output_dir}/${hydra.job.name}.log
-#       rich:
-#         class: rich.logging.RichHandler
-#         formatter: simple
-#         rich_tracebacks: true
-#     root:
-#       level: INFO
-#       handlers:
-#       - rich
-#       - file
-#     disable_existing_loggers: false
