--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ dependencies = [
     "cloudpickle>=3.1.1",
     "h5py>=3.13.0",
     "hydra-core>=1.3.2",
+    "hydra-ray-launcher>=0.1.2",
     "netcdf4>=1.7.2",
     "rich>=14.0.0",
-    "torch>=2.6.0",
+    "torch==2.7.0",
     "tqdm>=4.67.1",
 ]
 
@@ -50,5 +51,7 @@ include = [
 packages = ["src/hspn"]
 
 [tool.ruff]
+preview = true
+line-length = 120
 ignore = ["N813"]
-
+lint.dummy-variable-rgx = "^_$"
