--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,17 +3,17 @@ name = "hspn"
 version = "0.1.0"
 description = "deep operator networks for ARL CFD"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10.12"
 authors = [
   { name = "Marco Christiani", email = "mchristiani@sei.cmu.edu" },
   { name="Jasmine Ratchford", email="jratchford@sei.cmu.edu" },
 ]
 
 dependencies = [
-    "h5py>=3.13.0",
+    "h5py>3.10.0",
     "hydra-core>=1.3.2",
     "rich>=14.0.0",
-    "torch==2.7.0",
+    "torch==2.4.0",
     "aim>=3.28.0",
 ]
 
@@ -23,15 +23,13 @@ dev = [
     "psutil>=5.9.0",
     "pytest>=8.4.1",
     "pytest-cov>=4.0.0",
-    "rq-dashboard>=0.8.2.2",
     "ruff>=0.9.7",
 ]
 hpo = [
-    "cloudpickle>=3.1.1",
-    "hydra-optuna-sweeper>=1.2.0",
-    "hydra-ray-launcher>=0.1.2",
-    "hydra-rq-launcher>=1.2.0",
-    "rq>=2.2.0",
+    "hydra-optuna-sweeper==1.2.0",
+    "redis>=6.4.0",
+    "hydra-ray-launcher>=1.2.0",
+    "pydantic<2", # https://github.com/ray-project/ray/issues/37019
 ]
 
 [project.scripts]
@@ -55,6 +53,7 @@ preview = true
 line-length = 120
 lint.ignore = ["N813"]
 lint.dummy-variable-rgx = "^_$"
+target-version = "py310"
 
 
 # [tool.mypy]
