--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ hpo = [
     "hydra-ray-launcher>=1.2.0",
     "pydantic<2", # https://github.com/ray-project/ray/issues/37019
 ]
+gnn = [
+    "ray[train]>=2.44.0",
+    "schedulefree>=1.4.1",
+    "tensorboard>=2.20.0",
+]
 
 [project.scripts]
 hspn-preprocess = "hspn.prepare:main"
